@@ -1,7 +1,6 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.helpers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -22,8 +21,6 @@ import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicRespo
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicRestrictedReporting;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
@@ -49,8 +46,7 @@ class DynamicListHelperTest {
     private DynamicValueType dynamicValueType;
 
     @BeforeEach
-    @SneakyThrows
-    void setUp() {
+    void setUp() throws Exception {
         caseDetails1 = generateCaseDetails("caseDetailsTest1.json");
         caseDetails2 = generateCaseDetails("caseDetailsTest2.json");
         caseDetails4 = generateCaseDetails("caseDetailsTest4.json");
@@ -59,7 +55,7 @@ class DynamicListHelperTest {
         dynamicValueType = new DynamicValueType();
     }
 
-    private CaseDetails generateCaseDetails(String jsonFileName) throws URISyntaxException, IOException {
+    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(Thread.currentThread()
             .getContextClassLoader().getResource(jsonFileName)).toURI())));
         ObjectMapper mapper = new ObjectMapper();
@@ -73,19 +69,19 @@ class DynamicListHelperTest {
         dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().getFirst()
-                .getValue().getDynamicRespRepName().getListItems().getFirst());
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().get(0)
+                .getValue().getDynamicRespRepName().getListItems().get(0));
     }
 
     @Test
     void populateDynamicRespondentRepList() {
         DynamicRespondentRepresentative.dynamicRespondentRepresentativeNames(caseDetails6.getCaseData());
-        assertNotNull(caseDetails6.getCaseData().getRepCollection().getFirst().getValue().getDynamicRespRepName());
+        assertNotNull(caseDetails6.getCaseData().getRepCollection().get(0).getValue().getDynamicRespRepName());
         dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().getFirst()
-                .getValue().getDynamicRespRepName().getListItems().getFirst());
+        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().get(0)
+                .getValue().getDynamicRespRepName().getListItems().get(0));
     }
 
     @Test
@@ -95,7 +91,7 @@ class DynamicListHelperTest {
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
         assertEquals(dynamicValueType, caseDetails1.getCaseData().getRestrictedReporting()
-                .getDynamicRequestedBy().getListItems().getFirst());
+                .getDynamicRequestedBy().getListItems().get(0));
     }
 
     @Test
@@ -128,21 +124,21 @@ class DynamicListHelperTest {
         assertNotNull(caseDetails1.getCaseData().getDepositCollection());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
                 .getValue().getDynamicDepositOrderAgainst().getValue());
         dynamicValueType.setCode("Tribunal");
         dynamicValueType.setLabel("Tribunal");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
                 .getValue().getDynamicDepositRequestedBy().getValue());
     }
 
     @Test
     void dynamicDepositRefund() {
-        caseDetails1.getCaseData().getDepositCollection().getFirst().getValue().setDepositRefund("Yes");
+        caseDetails1.getCaseData().getDepositCollection().get(0).getValue().setDepositRefund("Yes");
         DynamicDepositOrder.dynamicDepositOrder(caseDetails1.getCaseData());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
                 .getValue().getDynamicDepositRefundedTo().getValue());
     }
 
@@ -152,7 +148,7 @@ class DynamicListHelperTest {
                 caseDetails1.getCaseData());
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
-        assertEquals(dynamicValueType, dynamicHearingList.getFirst());
+        assertEquals(dynamicValueType, dynamicHearingList.get(0));
         dynamicValueType.setCode("2");
         dynamicValueType.setLabel("2 - Single - Manchester - 25 Nov 2019");
         assertEquals(dynamicValueType, dynamicHearingList.get(1));
@@ -164,7 +160,7 @@ class DynamicListHelperTest {
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
         assertEquals(dynamicValueType, caseDetails1.getCaseData().getCorrespondenceType()
-                .getDynamicHearingNumber().getListItems().getFirst());
+                .getDynamicHearingNumber().getListItems().get(0));
         assertNull(caseDetails1.getCaseData().getCorrespondenceScotType());
     }
 
@@ -174,7 +170,7 @@ class DynamicListHelperTest {
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Glasgow - 25 Nov 2019");
         assertEquals(dynamicValueType, caseDetailsScotTest1.getCaseData()
-                .getCorrespondenceScotType().getDynamicHearingNumber().getListItems().getFirst());
+                .getCorrespondenceScotType().getDynamicHearingNumber().getListItems().get(0));
         assertNull(caseDetailsScotTest1.getCaseData().getCorrespondenceType());
     }
 
@@ -185,8 +181,8 @@ class DynamicListHelperTest {
         int totalJurisdictions = caseDetails1.getCaseData().getJurCodesCollection().size();
         DynamicValueType dynamicValue = DynamicListHelper
                 .getDynamicValue(caseDetails1.getCaseData().getJurCodesCollection()
-                .getFirst().getValue().getJuridictionCodesList());
-        assertEquals(dynamicValue, listItems.getFirst());
+                .get(0).getValue().getJuridictionCodesList());
+        assertEquals(dynamicValue, listItems.get(0));
         assertEquals(totalJurisdictions, listItems.size());
     }
 
@@ -203,19 +199,19 @@ class DynamicListHelperTest {
         CaseData caseData = caseDetails1.getCaseData();
         DynamicJudgements.dynamicJudgements(caseData);
         int totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
     @Test
     void dynamicJudgementHearing_HearingDateFilled() {
         CaseData caseData = caseDetails1.getCaseData();
-        caseData.getJudgementCollection().getFirst().getValue().setJudgmentHearingDate("2019-11-01");
+        caseData.getJudgementCollection().get(0).getValue().setJudgmentHearingDate("2019-11-01");
         DynamicJudgements.dynamicJudgements(caseData);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
         assertEquals(dynamicValueType, caseData.getJudgementCollection()
-                .getFirst().getValue().getDynamicJudgementHearing().getValue());
+                .get(0).getValue().getDynamicJudgementHearing().getValue());
     }
 
     @Test
@@ -224,13 +220,13 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingListItems = DynamicListHelper.createDynamicHearingList(caseData);
         DynamicFixedListType listHearing = new DynamicFixedListType();
         listHearing.setListItems(hearingListItems);
-        caseData.getJudgementCollection().getFirst().getValue().setDynamicJudgementHearing(listHearing);
+        caseData.getJudgementCollection().get(0).getValue().setDynamicJudgementHearing(listHearing);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
-        caseData.getJudgementCollection().getFirst().getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
+        caseData.getJudgementCollection().get(0).getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
         DynamicJudgements.dynamicJudgements(caseData);
         assertEquals(dynamicValueType, caseData.getJudgementCollection()
-                .getFirst().getValue().getDynamicJudgementHearing().getValue());
+                .get(0).getValue().getDynamicJudgementHearing().getValue());
     }
 
     @Test
@@ -239,7 +235,7 @@ class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
         int totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
@@ -249,8 +245,8 @@ class DynamicListHelperTest {
         caseData.setHearingCollection(null);
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
-        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
-        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().getFirst().getCode());
+        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
+        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().get(0).getCode());
     }
 
     @Test
@@ -265,7 +261,7 @@ class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(casedata);
 
         assertNotNull(casedata.getJudgementCollection());
-        JudgementType judgementType = casedata.getJudgementCollection().getFirst().getValue();
+        JudgementType judgementType = casedata.getJudgementCollection().get(0).getValue();
         assertNull(judgementType.getJudgmentHearingDate());
     }
 
@@ -284,10 +280,10 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.getFirst().getCode());
+        assertEquals(hearingNumber, hearingList.get(0).getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 venue, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
+        assertEquals(expectedLabel, hearingList.get(0).getLabel());
     }
 
     @ParameterizedTest
@@ -306,10 +302,10 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.getFirst().getCode());
+        assertEquals(hearingNumber, hearingList.get(0).getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 venue, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
+        assertEquals(expectedLabel, hearingList.get(0).getLabel());
     }
 
     private static Stream<Arguments> testCreateDynamicHearingListWithScotlandVenue() {
@@ -331,8 +327,7 @@ class DynamicListHelperTest {
                         Constants.HEARING_STATUS_HEARD,
                         true)
                 .build();
-        caseData.getHearingCollection()
-                .getFirst().getValue().setHearingVenueScotland(TribunalOffice.LEEDS.getOfficeName());
+        caseData.getHearingCollection().get(0).getValue().setHearingVenueScotland(TribunalOffice.LEEDS.getOfficeName());
 
         assertThrows(IllegalStateException.class, () -> DynamicListHelper.createDynamicHearingList(caseData));
     }
@@ -351,9 +346,9 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.getFirst().getCode());
+        assertEquals(hearingNumber, hearingList.get(0).getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 null, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
+        assertEquals(expectedLabel, hearingList.get(0).getLabel());
     }
 }
