@@ -1,7 +1,6 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.helpers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -21,8 +20,6 @@ import uk.gov.hmcts.et.common.model.ccd.types.UploadedDocumentType;
 import uk.gov.hmcts.et.common.model.ccd.types.citizenhub.HubLinksStatuses;
 import uk.gov.hmcts.ethos.replacement.docmosis.domain.TokenResponse;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -52,8 +49,7 @@ public class HelperTest {
     private CaseDetails caseDetailsScot2;
 
     @BeforeEach
-    @SneakyThrows
-    void setUp() {
+    void setUp() throws Exception {
         caseDetails1 = generateCaseDetails("caseDetailsTest1.json");
         caseDetails4 = generateCaseDetails("caseDetailsTest4.json");
         caseDetailsScot1 = generateCaseDetails("caseDetailsScotTest1.json");
@@ -75,7 +71,7 @@ public class HelperTest {
                 "openid profile roles", "Bearer");
     }
 
-    private CaseDetails generateCaseDetails(String jsonFileName) throws URISyntaxException, IOException {
+    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(Thread.currentThread()
             .getContextClassLoader().getResource(jsonFileName)).toURI())));
         ObjectMapper mapper = new ObjectMapper();
@@ -347,7 +343,6 @@ public class HelperTest {
 
         Helper.removeSpacesFromPartyNames(caseData);
 
-        assertEquals("Representative Name", caseData.getRepCollection()
-                .getFirst().getValue().getNameOfRepresentative());
+        assertEquals("Representative Name", caseData.getRepCollection().get(0).getValue().getNameOfRepresentative());
     }
 }
