@@ -1,7 +1,6 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,6 +26,7 @@ import uk.gov.hmcts.et.common.model.ccd.types.CorrespondenceScotType;
 import uk.gov.hmcts.et.common.model.ccd.types.CorrespondenceType;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException;
 
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDate;
@@ -73,8 +73,7 @@ class DocumentGenerationServiceTest {
     private CcdClient ccdClient;
 
     @BeforeEach
-    @SneakyThrows
-    void setUp() {
+    void setUp() throws Exception {
         caseDetailsScot1 = generateCaseDetails("caseDetailsScotTest1.json");
         caseDetails9 = generateCaseDetails("caseDetailsTest9.json");
         caseDetails10 = generateCaseDetails("caseDetailsTest10.json");
@@ -138,7 +137,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
+                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -148,7 +147,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Company", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Orlando LTD",
-                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
+                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
         assertEquals(1, caseData.getAddressLabelCollection().size());
     }
 
@@ -158,15 +157,15 @@ class DocumentGenerationServiceTest {
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
         assertEquals(LocalDate.now().toString(),
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
         assertEquals(LocalDate.now().plusDays(29).toString(),
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
         assertEquals("Claim served",
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
         assertEquals("Other action",
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
 
     }
 
@@ -182,15 +181,15 @@ class DocumentGenerationServiceTest {
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
         assertEquals(LocalDate.now().toString(),
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
         assertEquals(LocalDate.now().plusDays(29).toString(),
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
         assertEquals("Other action",
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
         assertEquals("Claim served",
-                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
+                caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
         caseDetails13.getCaseData().setCorrespondenceScotType(null);
         CorrespondenceType backUp = caseDetails13.getCaseData().getCorrespondenceType();
         caseDetails13.getCaseData().setCorrespondenceType(backUp);
@@ -202,7 +201,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
+                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -212,7 +211,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
+                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -311,8 +310,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processDocumentRequest() {
+    void processDocumentRequest() throws IOException {
         when(tornadoService.documentGeneration(
                 anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
         DocumentInfo documentInfo1 = documentGenerationService.processDocumentRequest(
@@ -332,8 +330,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkDocumentRequest() {
+    void processBulkDocumentRequest() throws IOException {
         SubmitEvent submitEvent = new SubmitEvent();
         submitEvent.setCaseId(1);
         submitEvent.setCaseData(new CaseData());
@@ -347,8 +344,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkDocumentRequestWithErrors() {
+    void processBulkDocumentRequestWithErrors() throws IOException {
         SubmitEvent submitEvent = new SubmitEvent();
         submitEvent.setCaseId(1);
         submitEvent.setCaseData(new CaseData());
@@ -365,8 +361,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkDocumentRequestException() {
+    void processBulkDocumentRequestException() throws IOException {
         SubmitEvent submitEvent = new SubmitEvent();
         submitEvent.setCaseId(1);
         submitEvent.setCaseData(new CaseData());
@@ -382,8 +377,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkScheduleRequest() {
+    void processBulkScheduleRequest() throws IOException {
         when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
         BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(
                 bulkRequest, "authToken");
@@ -393,8 +387,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkScheduleRequestWithErrors() {
+    void processBulkScheduleRequestWithErrors() throws IOException {
         bulkRequest.getCaseDetails().getCaseData().setSearchCollection(null);
         when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
         BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(
@@ -406,8 +399,7 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    @SneakyThrows
-    void processBulkScheduleRequestException() {
+    void processBulkScheduleRequestException() throws IOException {
         when(tornadoService.scheduleGeneration(anyString(), any(), anyString()))
                 .thenThrow(new InternalException(ERROR_MESSAGE));
 
@@ -416,8 +408,7 @@ class DocumentGenerationServiceTest {
         );
     }
 
-    @SneakyThrows
-    private CaseDetails generateCaseDetails(String jsonFileName) {
+    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
         String json = new String(Files.readAllBytes(Paths.get(Objects
                 .requireNonNull(Thread.currentThread().getContextClassLoader()
                         .getResource(jsonFileName)).toURI())));
